--- a/main/Environment Variables.env
+++ b/main/Environment Variables.env
@@ -1,4 +1,4 @@
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-UPSTOX_API_KEY=your_upstox_api_key
-UPSTOX_API_SECRET=your_upstox_api_secret
-REDIRECT_URI=https://your-render-url/callback
+TELEGRAM_BOT_TOKEN=7762384377:AAGBv8XH8afYgIIN4BMj_nKOVsj-yqYbhVY
+UPSTOX_API_KEY=98b99c27-06d7-4ba0-b77b-2fd134469c3f
+UPSTOX_API_SECRET=vkygkh19pb
+REDIRECT_URI=https://automatedtrading.onrender.com/callback
